# goit-ds-hw-03

part1/: README  main.py  pyproject.toml  seed.py
part2/: README  connect_mongo.py  main.py  models.py  seed.py
